fix Overflow x

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 body {
     background-color: #0f111a;
     color: White;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 
